--- a/website/templates/add_admin.html
+++ b/website/templates/add_admin.html
@@ -11,7 +11,7 @@
                 <h3 class="mb-4 text-center">Add Admin</h3>
                 <form method="POST">
                     <div class="mb-3">
-                        <label for="email" class="form-label ">Email Address</label>
+                        <label for="email" class="form-label ">Email Address of the user to add</label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
                     </div>
                     <div class="mb-3">
