--- a/website/templates/home_page.html
+++ b/website/templates/home_page.html
@@ -80,6 +80,7 @@
         <section class="py-5 ms-1 me-1 mt-2 mb-2" style="background: linear-gradient(to bottom right, #3b4b61, #2f3e52, #273746);border-radius: 1rem;">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    <!--1st product-->
                     <div class="col mb-5" >
                         <div class="card h-100 ">
                             <!-- Product image-->
@@ -90,7 +91,27 @@
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">gillet</h5>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    80DT
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col mb-5" >
+                        <div class="card h-100 ">
+                            <!-- Product image-->
+                            <img src="{{ url_for('static', filename='assets/product_images/Shoes.jpeg') }}" class="card"  />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Shoes</h5>
+                                    <!-- Product price-->
+                                    150DT
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -102,14 +123,14 @@
                     <div class="col mb-5" >
                         <div class="card h-100 ">
                             <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
+                            <img src="{{ url_for('static', filename='assets/product_images/Djean.jpeg') }}" class="card"  />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
+                                    <h5 class="fw-bolder">Djean</h5>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    90 DT
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -118,17 +139,18 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col mb-5" >
                         <div class="card h-100 ">
                             <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
+                            <img src="{{ url_for('static', filename='assets/product_images/T-shirt.jpeg') }}" class="card"  />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
+                                    <h5 class="fw-bolder">T-shirt</h5>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    30 DT
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -136,103 +158,7 @@
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col mb-5" >
-                        <div class="card h-100 ">
-                            <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5" >
-                        <div class="card h-100 ">
-                            <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5" >
-                        <div class="card h-100 ">
-                            <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5" >
-                        <div class="card h-100 ">
-                            <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5" >
-                        <div class="card h-100 ">
-                            <!-- Product image-->
-                            <img src="{{ url_for('static', filename='assets/product_images/gillet.jpeg') }}" class="card"  />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">gillet</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    
+                    </div>                    
                 </div>
             </div>
         </section>
