--- a/website/templates/create_product.html
+++ b/website/templates/create_product.html
@@ -10,22 +10,43 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    {% with messages = get_flashed_messages( with_categories = true ) %}
+    {% if messages %}
+        {% for category, message in messages %}
+        {% if category == 'Error' %}
+        <div class = "alert alert-danger alter-dismissable fade show " role="alert" >
+            {{message}}
+            <button type="button" class="close" data-dismiss = "alert">
+                <span aria-hidden="true" >&times;</span>
+            </button>
+        </div>
+        {% else %}
+        <div class = "alert alert-success alter-dismissable fade show " role="alert" >
+            {{message}}
+            <button type="button" class="close" data-dismiss = "alert">
+                <span aria-hidden="true" >&times;</span>
+            </button>
+
+        </div>
+        {%endif%} {%endfor%} {%endif%} {%endwith%}
+
 </head>
 
 <body>
+    
     <div class="container-fluid  white-bg p-3 " >
 
 
 
         <h1>Post a product :</h1>
 
-        <form class="mt-5 mx-3" method="POST" enctype="multipart/form-data" >
+        <form class="mt-5 mx-3" method="POST" action="/create_product" enctype="multipart/form-data" >
             <div class="row my-3">
                 <div class="col-12 col-md-4 col-lg-3">
                     <label for="title" class="text-lg fw-bold form-label">Title :</label>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <input type="text" id="title" name="title" class="form-control" placeholder="Title">
+                    <input type="text" id="title" name="title" class="form-control" placeholder="Title" required>
                 </div>
             </div>
 
@@ -34,13 +55,12 @@
                     <label for="category" class="text-lg fw-bold form-label">category :</label>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <select name="category" id="category" class="form-control col-5">
-                        <option value="t-shirts">T-shirts</option>
-                        <option value="jeans">Jeans</option>
-                        <option value="jackets">Jackets</option>
-                        <option value="shoes">Shoes</option>
-                        <option value="accessories">Accessories</option>
-                        <option value="sportswear">Sportswear</option>
+                    <select name="category" id="category" class="form-control col-5" required>
+                        <option value="T-shirts">T-shirts</option>
+                        <option value="Jeans">Jeans</option>
+                        <option value="Jackets">Jackets</option>
+                        <option value="Shoes">Shoes</option>
+                        <option value="Accessories">Accessories</option>
                     </select>
                 </div>
             </div>
@@ -48,17 +68,17 @@
 
             <div class="row my-3">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <label for="price" class="text-lg fw-bold form-label">Price :</label>
+                    <label for="price" class="text-lg fw-bold form-label">Price (DT) : </label>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
-                    <input type="text" id="price" name="price" class="form-control" placeholder="100 DT">
+                    <input type="text" id="price" name="price" class="form-control" placeholder="100" required>
                 </div>
             </div>
 
 
             <div class="row my-3">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <label for="image" class="text-lg fw-bold form-label">Select image(s):</label>
+                    <label for="image" class="text-lg fw-bold form-label">Select image :</label>
                 </div>
                 <div class="col-12 col-md-8 col-lg-9">
                     <input type="file" class="form-control-file col-5" id="image" name="image">
@@ -67,7 +87,7 @@
 
 
 
-            <input type="submit" value="Submit" class="mx-auto btn btn-primary mt-5  ">
+            <input type="submit" value="Submit" class="mx-auto btn btn-primary mt-5">
             <div class="text-right">
                 <a href="{{url_for('home_page')}}" class="" >Return to Home page</a>
             </div>
